Adjust GitHub pages deploy location. Change BrowserRouter to HashRouter to handle site routes properly. Properly set styles on NavBar link objects.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jz-portfolio",
-  "homepage": "https://johnzillgittdev.github.io/portfolio",
+  "homepage": "https://johnzillgittdev.github.io/jz-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
